<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8fa"
    tools:context=".AddCardActivity">


    <TextView
        android:id="@+id/payment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment"
        android:textSize="35sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="#4f53f7"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_text">

        <ImageView
            android:id="@+id/card_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/card_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="1234 5687 2314 1234"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:text="@string/card_holder"
                android:textColor="#C0C0C0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/exp_date"
                android:textColor="#C0C0C0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/magari_kaci"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="16" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/magari_kaci" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:onClick="showDatePicker"
                    android:gravity="center"
                    android:hint="@string/date"
                    android:inputType="number" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvv_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLength="3"
                    android:hint="@string/last_three_num"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_card_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:backgroundTint="#4e53f7"
        android:text="@string/save_card"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/cardview" />


</androidx.constraintlayout.widget.ConstraintLayout>